# Football-club-Django-

./: db.sqlite3  pyproject.toml
Match/: forms.py  models.py  urls.py  views.py
Match/migrations/: 0001_initial.py
Match/templates/: add_match.html
Payment/: admin.py  models.py  urls.py  views.py
Payment/migrations/: 0001_initial.py  0002_payment_payer.py
Payment/templates/: payment_list.html
Player/: forms.py  models.py  urls.py  views.py
Player/migrations/: 0001_initial.py  0002_remove_players_contract_end_date_and_more.py  0003_players_contract_end_date_players_signing_date.py
Player/templates/: add_player.html  players_list.html  sell_player.html
Sponsor/: admin.py  forms.py  models.py  urls.py  views.py
Sponsor/migrations/: 0001_initial.py
Sponsor/templates/: add_sponsor.html
User/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
User/migrations/: 0001_initial.py  0002_customuser_photo.py
User/templates/: 404.html  accountant_main.html  admin_main.html  auth.html  create_user.html  forget.html  marketer_main.html  select_user.html  sport_dir_main.html  test.html  tets.html
club/: models.py
club/migrations/: 0001_initial.py
core/: settings.py  urls.py
staff/: admin.py  forms.py  models.py  urls.py  views.py
staff/migrations/: 0001_initial.py
staff/templates/: add_staff.html  select_staff.html  staff_list.html
static/css/: admin.css
