[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["AleB0r <sasha2014993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
